<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/theme_header">

        <ListPreference
            app:key="theme"
            app:title="@string/choose_theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="2"
            app:summary="%s" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">

        <Preference
            app:key="version"
            app:title="@string/abour_version"
            app:summary="1.0" />

        <Preference
            app:key="license"
            app:title="@string/about_license"
            app:summary="Open Source" />

        <Preference
            app:key="developer"
            app:title="Developer"
            app:summary="tcm" />

    </PreferenceCategory>

</PreferenceScreen>